--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   provider: ^6.0.5
   carousel_slider: ^4.2.1
+  dart_date: ^1.2.1
 
 dev_dependencies:
   flutter_test:
