--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.5
   carousel_slider: ^4.2.1
   dart_date: ^1.2.1
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
