--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   carousel_slider: ^4.2.1
   dart_date: ^1.2.1
   uuid: ^3.0.7
+  shared_preferences: ^2.1.1
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
